[gd_scene load_steps=10 format=3 uid="uid://nrw8yqh4en57"]

[ext_resource type="Script" path="res://World.gd" id="1_5p6na"]
[ext_resource type="Texture2D" uid="uid://d10ws815dhhay" path="res://colors.png" id="1_llyad"]
[ext_resource type="Script" path="res://Map.gd" id="2_fca5v"]
[ext_resource type="Script" path="res://Gui.gd" id="5_blgpv"]
[ext_resource type="PackedScene" uid="uid://3k746bv5w2nj" path="res://gui.tscn" id="8_oun1u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i52ir"]
texture = ExtResource("1_llyad")
margins = Vector2i(32, 32)
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
4:2/0 = 0

[sub_resource type="TileSet" id="TileSet_cq5te"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_i52ir")

[sub_resource type="GDScript" id="GDScript_qt6ws"]
script/source = "# NoiseType.gd
#---------------------------------
extends OptionButton

#---------------------------------
@onready var g_map: Map = get_tree().root.get_node(\"World\").get_node(\"Map\")

#---------------------------------
func _ready():
	add_item('noise type simplex', FastNoiseLite.NoiseType.TYPE_SIMPLEX)
	add_item('noise type simplex smooth', FastNoiseLite.NoiseType.TYPE_SIMPLEX_SMOOTH)
	add_item('noise type cellular', FastNoiseLite.NoiseType.TYPE_CELLULAR)
	add_item('noise type perlin', FastNoiseLite.NoiseType.TYPE_PERLIN)
	add_item('noise type cubic', FastNoiseLite.NoiseType.TYPE_VALUE_CUBIC)
	add_item('noise type value', FastNoiseLite.NoiseType.TYPE_VALUE)

#---------------------------------
func _on_item_selected(index):
	g_map.m_noiseType = index
	g_map.generateWorld()

"

[sub_resource type="GDScript" id="GDScript_3u4f7"]
script/source = "# NoiseType.gd
#---------------------------------
extends OptionButton

#---------------------------------
@onready var g_map: Map = get_tree().root.get_node(\"World\").get_node(\"Map\")

#---------------------------------
func _ready():
	add_item('fractal none', FastNoiseLite.FractalType.FRACTAL_NONE)
	add_item('fractal fbm', FastNoiseLite.FractalType.FRACTAL_FBM)
	add_item('fractal ridged', FastNoiseLite.FractalType.FRACTAL_RIDGED)
	add_item('fractal ping pong', FastNoiseLite.FractalType.FRACTAL_PING_PONG)

#---------------------------------
func _on_item_selected(index):
	g_map.m_fractalType = index
	g_map.generateWorld()

#---------------------------------


"

[node name="World" type="Node2D"]
script = ExtResource("1_5p6na")

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
limit_left = -1000
limit_top = -1000
limit_right = 17000
limit_bottom = 17000
limit_smoothed = true
position_smoothing_enabled = true

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cq5te")
format = 2
script = ExtResource("2_fca5v")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Gui" parent="CanvasLayer2" instance=ExtResource("8_oun1u")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Gui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_blgpv")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Gui"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 186.0

[node name="Noise" type="VBoxContainer" parent="CanvasLayer/Gui/VBoxContainer"]
layout_mode = 2

[node name="NoiseType" type="OptionButton" parent="CanvasLayer/Gui/VBoxContainer/Noise"]
layout_mode = 2
script = SubResource("GDScript_qt6ws")

[node name="Seed" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Noise"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Noise/Seed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
step = 0.0
rounded = true

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Noise/Seed"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "seed: "

[node name="Frequency" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Noise"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Noise/Frequency"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
max_value = 0.1
step = 0.005

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Noise/Frequency"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="Fractals" type="VBoxContainer" parent="CanvasLayer/Gui/VBoxContainer"]
layout_mode = 2

[node name="FractalType" type="OptionButton" parent="CanvasLayer/Gui/VBoxContainer/Fractals"]
layout_mode = 2
script = SubResource("GDScript_3u4f7")

[node name="FractalOctaves" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Fractals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalOctaves"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
max_value = 10.0

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalOctaves"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "fractal octaves: "

[node name="FractalLacunarity" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Fractals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalLacunarity"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
max_value = 10.0

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalLacunarity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "fractal lacunarity: "

[node name="FractalGain" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Fractals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalGain"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalGain"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "fractal gain: "

[node name="FractalWeight" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Fractals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalWeight"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalWeight"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "fractal weight: "

[node name="FractalPingpong" type="HBoxContainer" parent="CanvasLayer/Gui/VBoxContainer/Fractals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalPingpong"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="CanvasLayer/Gui/VBoxContainer/Fractals/FractalPingpong"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "fractal ping pong: "

[connection signal="item_selected" from="CanvasLayer/Gui/VBoxContainer/Noise/NoiseType" to="CanvasLayer/Gui/VBoxContainer/Noise/NoiseType" method="_on_item_selected"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Noise/Seed/HSlider" to="CanvasLayer/Gui" method="_on_seed_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Noise/Frequency/HSlider" to="CanvasLayer/Gui" method="_on_freq_slider_value_changed"]
[connection signal="item_selected" from="CanvasLayer/Gui/VBoxContainer/Fractals/FractalType" to="CanvasLayer/Gui/VBoxContainer/Fractals/FractalType" method="_on_item_selected"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Fractals/FractalOctaves/HSlider" to="CanvasLayer/Gui" method="_on_fracOct_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Fractals/FractalLacunarity/HSlider" to="CanvasLayer/Gui" method="_on_fracLac_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Fractals/FractalGain/HSlider" to="CanvasLayer/Gui" method="_on_fracGain_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Fractals/FractalWeight/HSlider" to="CanvasLayer/Gui" method="_on_fracWeight_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Gui/VBoxContainer/Fractals/FractalPingpong/HSlider" to="CanvasLayer/Gui" method="_on_fracPingpong_slider_value_changed"]
